--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "mongoose": "^6.2.1",
+    "mongoose": "^6.6.4",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.15",
-    "uuid": "^8.3.2"
+    "nodemon": "^2.0.20",
+    "uuid": "^9.0.0",
+    "vite": "^3.1.0",
+    "vue": "^3.2.39"
   }
 }
