--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "dependencies": {
-    "nodemon": "^2.0.19",
-    "vite": "^3.1.0",
-    "vue": "^3.2.39"
+    "cjs": "^0.0.11",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1",
+    "mongoose": "^6.6.5",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.20",
+    "uuid": "^9.0.0",
+    "vite": "^3.1.6",
+    "vue": "^3.2.40"
   }
 }
